--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "src/app.js",
   "type": "module",
   "scripts": {
+    "build": "vite build",
     "start": "nodemon app.js",
-    "server": "json-server --watch db.json --port 3001",
-    "dev": "concurrently \"npm run server\" \"npm run start\""
+    "dev": "vite"
   },
   "repository": {
     "type": "git",
@@ -24,9 +24,20 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.35.0",
+    "cloudinary-core": "^2.13.0",
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "json-server": "^0.17.2"
+    "joi": "^17.9.1",
+    "json-server": "^0.17.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "vite-plugin-node": "^3.0.2"
   }
 }
