--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "onclass",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "build": "vite build",
